cmake_minimum_required(VERSION 3.6)
project(bfs)
SET (CMAKE_C_COMPILER             "/usr/bin/clang")
SET (CMAKE_CXX_COMPILER             "/usr/bin/clang++")
set(CMAKE_CXX_STANDARD 17)
set(SOURCE bfs.cc scanner.hpp scanner.cc token.hpp token.cc transformer.hpp transformer.cc bfi.hpp bfi.cc)
add_executable(${PROJECT_NAME} ${SOURCE})